# optimsed_sni

./: CMakeLists.txt  README.md  benchmark.cpp  main.cpp
include/: chebyshev_differentiation.h  integrator_base.h  position_integrator.h  quaternion_integrator.h  rod.h
src/: position_integrator.cpp  quaternion_integrator.cpp  rod.cpp
